fix spacing in navbar

--- a/src/components/Navigation/NavBar/NavBar.module.css
+++ b/src/components/Navigation/NavBar/NavBar.module.css
@@ -5,18 +5,5 @@
   top: 0;
   width: 100%;
   justify-content: flex-end;
-  align-items: center;
   height: 80px;
-  animation-name: slideInFromTop;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-}
-
-@keyframes slideInFromTop {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0);
-  }
 }
