--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,5 +1,5 @@
 .NavItem {
-  margin: 25px;
+  margin: 0 25px;
 }
 
 .NavItem a {
