--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
   font-family: "Raleway", sans-serif;
-  color: #00203fff;
   overflow-x: hidden;
 }
